add setters in Wheel and Engine. add deep copy in Car constructor.